Revision history for {{$dist->name}}

{{$NEXT}}
  [ API CHANGES ]

  [ BUG FIXES ]

  [ DOCUMENTATION ]

  [ ENHANCEMENTS ]

  [ NEW FEATURES ]

  [ STATISTICS ]

0.27.0 2017-04-16
  [ ENHANCEMENTS ]
    - YANICK is the default Authority.
    - some plugins skipped if env variable TRAVIS is present
    - add dependency for Test::Prereqs

  [ STATISTICS ]
    - code churn: 3 files changed, 19 insertions(+), 5 deletions(-)

0.26.0 2017-02-26
  [ ENHANCEMENTS ]
    - Remove Test::Pause::Permissions.
    - Use ReadmeAnyFrom Pod.

  [ STATISTICS ]
    - code churn: 4 files changed, 11 insertions(+), 11 deletions(-)

0.25.1 2015-12-31
  [ DOCUMENTATION ]
    - Fix typo in SYNOPSIS. (GH#5, dams)

  [ STATISTICS ]
    - code churn: 2 files changed, 9 insertions(+), 2 deletions(-)

0.25.0 2015-11-08
  [ ENHANCEMENTS ]
    - Add Test::Pause::Permissions.

  [ STATISTICS ]
    - code churn: 4 files changed, 16 insertions(+), 5 deletions(-)

0.24.0 2015-07-07
  [ ENHANCEMENTS ]
    - More to DZP::Git::Contributor. (GH#4, Karen Etheridge)
    - Remove deprecated private nextVersion plugin. (GH#1-ish)

  [ STATISTICS ]
    - code churn: 5 files changed, 129 insertions(+), 284 deletions(-)

0.23.0 2015-05-28
  [ ENHANCEMENTS ]
    - Change Reporting module to Test::ReportPrereqs.

  [ STATISTICS ]
    - code churn: 3 files changed, 12 insertions(+), 4 deletions(-)

0.22.1 2015-03-18
  [ BUG FIXES ]
    - It's VerifyPhase*s*. Oops.

  [ STATISTICS ]
    - code churn: 2 files changed, 10 insertions(+), 3 deletions(-)

0.22.0 2015-02-03
  [ ENHANCEMENTS ]
    - Add VerifyPhase.
    - Add a few config params.

  [ STATISTICS ]
    - code churn: 4 files changed, 59 insertions(+), 8 deletions(-)

0.21.1 2014-11-06
  [ BUG FIXES ]
    - Remove redundance DZ::P::Homepage (it now comes from the GitHub
      plugins).

  [ STATISTICS ]
    - code churn: 3 files changed, 10 insertions(+), 6 deletions(-)

0.21.0 2014-08-31
  [ ENHANCEMENTS ]
    - Added CPANFile
    - Added DOAP