@@ -5,7 +5,7 @@ before_install:
   - git config --global user.name "Dist Zilla Plugin TravisCI"
   - git config --global user.email $HOSTNAME":not-for-mail@travis-ci.org"
 install:
-  - cpanm  --installdeps . --notest --skip-installed
+  - cpanm --installdeps -n .
 language: perl
 perl:
   - '5.14'
