@@ -314,6 +314,9 @@ sub configure {
         [ 'Git::Tag'  => { tag_format => 'v%v', branch => $release_branch } ],
         [ TravisCI => [
             verbose => 0,
+            install => 'cpanm --installdeps -n .',
+            script => 'prove -l t',
+            
             map { ( perl_version => $_ ) } $self->travis_perl_versions->@*
         ]  ]
     );
