@@ -8,6 +8,7 @@ Revision history for {{$dist->name}}
   [ DOCUMENTATION ]
 
   [ ENHANCEMENTS ]
+  - Travis tweaks.
 
   [ NEW FEATURES ]
 
